--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "vue": "^2.6.14",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "fullcalendar": "^5.11.3"
     }
 }
