--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.21.4",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.6.2",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -25,6 +25,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fullcalendar/core": "^5.11.3",
+        "@fullcalendar/daygrid": "^5.11.3",
+        "@fullcalendar/interaction": "^5.11.3",
+        "@fullcalendar/vue": "^5.11.2",
+        "bootstrap-vue": "^2.23.1",
         "fullcalendar": "^5.11.3"
     }
 }
