--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fullcalendar/core": "^5.11.3",
         "@fullcalendar/daygrid": "^5.11.3",
         "@fullcalendar/interaction": "^5.11.3",
+        "@fullcalendar/timegrid": "^5.11.3",
         "@fullcalendar/vue": "^5.11.2",
         "bootstrap-vue": "^2.23.1",
         "fullcalendar": "^5.11.3"
