--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@fullcalendar/timegrid": "^5.11.3",
         "@fullcalendar/vue": "^5.11.2",
         "bootstrap-vue": "^2.23.1",
-        "fullcalendar": "^5.11.3"
+        "fullcalendar": "^5.11.3",
+        "vuex": "^3.6.2"
     }
 }
