--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@fullcalendar/vue": "^5.11.2",
         "bootstrap-vue": "^2.23.1",
         "fullcalendar": "^5.11.3",
+        "vue-sweetalert2": "^5.0.5",
         "vuex": "^3.6.2"
     }
 }
