--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@fullcalendar/timegrid": "^5.11.3",
         "@fullcalendar/vue": "^5.11.2",
         "bootstrap-vue": "^2.23.1",
+        "chart.js": "^4.0.1",
         "fullcalendar": "^5.11.3",
         "vue-sweetalert2": "^5.0.5",
         "vuex": "^3.6.2"
